--- a/main.html
+++ b/main.html
@@ -7,10 +7,22 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<table>
+		<thead>
+			<tr>
+				<th>Roll Number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
+		<tr>
+			<td>1</td>
+			<td>Prudhvi</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Prudhvi</td>
+		</tr>
+	</table>
 </body>
 
 </html>
